Fix alignment and spacing on external editor checkbox

--- a/src/chrome/skin/default/scaffold/scaffold.css
+++ b/src/chrome/skin/default/scaffold/scaffold.css
@@ -66,3 +66,11 @@
 listbox {
 	min-width:200px;
 }
+
+#editor-external-box {
+	margin-top: 5px;
+}
+
+#editor-external-box label {
+	margin-left: 1px;
+}
